--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -8,6 +8,34 @@
         <meta name="author" content="Nathan Baldwin">
     </head>
     <body>
-        
+        <header>
+            <h1>A holy Layout Example</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">do you know rick?</a></li>
+                <li><a href="https://raidshadowlegends.com/">Have you heard of our sponser?</a></li>
+            </ul>
+        </nav>
+        <main>
+            <section>
+                <article>
+                    <h2>Article 1</h2>
+                    <p>here's some stuff that goes into an article which is pretty good stuff when it gets added</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>Article 2</h2>
+                    <p>here's some stuff that goes into an article which is pretty good stuff when it gets added</p>
+                </article>
+            </section>
+        </main>
+        <aside>
+            <img src="https://i.pinimg.com/736x/43/42/61/434261236d01c367357018760f5a80a3.jpg" alt="pickle rick" width="200">
+        </aside>
+        <footer>
+            🌲 Nathan Baldwin
+        </footer>
     </body>
 </html>
