--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Nathan Baldwin | WDD 130</title>
+        <meta name="description" content="This homepage is representation of Nathan Baldwin's skills as a beginner software developer, who is attending classes to improve their skill and this site">
+        <meta name="author" content="Nathan Baldwin">
     </head>
     <body>
         <header>
@@ -13,10 +15,16 @@
             </nav>
         </header>
         <main>
+            
             <h1>Nathan Baldwin | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Nathan Baldwin" width="300">
             <p>Hello! My name is Nathan Baldwin and I am from Washington State I enjoy drawing, 3d modeling, painting, and playing video games</p>
         </main>
+        <aside>
+            <h2>Washington</h2>
+            <img src="https://images.squarespace-cdn.com/content/v1/5d7ac4beb49f472f84660e4d/1606582808763-2OOIC2J8DBDT7W475G4E/Sticker-Washington-State-Golden-hour.jpg" width="200">
+            <p>Washington is a very rainy place where all of the land is pretty and green during the spring and in the summer its a comfortable warth of heat that won't make your skin melt right off your body</p>
+        </aside>
         <footer>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
         </footer>
