--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="This homepage is representation of Nathan Baldwin's skills as a beginner software developer, who is attending classes to improve their skill and this site">
         <meta name="author" content="Nathan Baldwin">
         <link rel="stylesheet" href="styles/styles.css">
+    </head>
     <body>
         <header>
             <nav>
