--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,5 +1,52 @@
 <!DOCTYPE html>
-<head>
-    
-</head>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,intial-scale=1.0">
+        <title>Rafting Site Plan | Nathan Baldwin</title>
+        <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
+        <meta name="author" content="Nathan Baldwin">
+        <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    </head>
+    <body>
+        <header>
+            <h1>Rafting Site Plan</h1>
+            <div>Nathan Baldwin</div>
+        </header>
+        <main>
+            <h2>Overview</h2>
+            <h3>Purpose</h3>
+            <p>Our purpose of this Rafting company is to procide you with the best and most effiecent raft that will meet your needs</p>
+            <h3>Audience</h3>
+            <p>Did you ever want a quality raft well, we provide it and we also provide a 24/7 customer service</p>
+            <h2>Branding</h2>
+            <h3>Website Logo</h3>
+            <img src="images/logo.png" alt="Rafting Site Logo">
+            <h2>Style Guide</h2>
+            <h3>Color Palette</h3>
+            Palette URL:<a href="https://coolors.co/022f40-38aecc-0090c1-183446-046e8f" target="_blank"> https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee</a>
+            <p></p>
+            <h3>Typography</h3>
+            <h4>Headings Example Font</h4>
+            <h4>Normal Text/Paragraph Example Font</h4>
+            <p>Bebas Neue</p>
+            <h4>Colored Callout Example Font</h4>
+            <p>Bebas Neue</p>
+            <h3>Navigation</h3>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About us</a>
+                <a href="#">Trips</a>
+                <a href="#">Contact Us</a>
+            </nav>
+            <h2>Wireframes</h2>
+            <h3>Home Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+            <h3>About Us Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Example Design" width="700">
+        </main>
+        <footer>
+            <p>©2024🌲 Rafting Site Document 🌲 Nathan Baldwin 🌲 Washington State</p>
+        </footer>
+    </body>
 </html>
