--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
-                <a href="wwr/site-plan-raftin.html">Site Plan</a>
+                <a href="wwr/site-plan-rafting.html">Site Plan</a>
             </nav>
         </header>
         <main>
