--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <body>
         <header>
             <nav>
+                <a href="https://linkedin.com">LinkedIn</a>
+                <a href="https://facebook.com">FaceBook</a>
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Site Plan</a>
@@ -18,11 +20,16 @@
         </header>
         <main>
             
-            <h1>Nathan Baldwin | WDD 130</h1>
+            <h1>Nathan Baldwin | WD3D 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Nathan Baldwin" width="300">
             <p>Hello! My name is Nathan Baldwin and I am from Washington State I enjoy drawing, 3d modeling, painting, and playing video games</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/santiago-chile-temple" target="_blank">Santiago Chile Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/albuquerque-new-mexico-temple" target="_blank">Albuquerque New Mexico Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/adelaide-australia-temple" target="_blank">Adelaide Australia Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box2">
             <h2>Washington</h2>
             <img src="https://images.squarespace-cdn.com/content/v1/5d7ac4beb49f472f84660e4d/1606582808763-2OOIC2J8DBDT7W475G4E/Sticker-Washington-State-Golden-hour.jpg" alt="washington" width="200">
             <p>Washington is a very rainy place where all of the land is pretty and green during the spring and in the summer its a comfortable warth of heat that won't make your skin melt right off your body</p>
@@ -31,4 +38,5 @@
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
         </footer>
     </body>
+    <!--5/8/2024--> 
 </html>
