--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <body></body>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Nathan Baldwin | WDD 130</title>
+        <meta name="description" content="This homepage is representation of Nathan Baldwin's skills as a beginner software developer, who is attending classes to improve their skill and this site">
+        <meta name="author" content="Nathan Baldwin">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
-    <header>
-        <img src="images/logo.png" alt="rafting-logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <div class="hero">
-            <h1>Rafting Company</h1>
-            <img src="images/hero.jpg" width="400">
-        </div>
-    </main>
-    <footer>
+    <body>
+        <header>
+            <img src="images/logo.png" alt="rafting-logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <main>
+            <div class="hero">
+                <h1>Rafting Company</h1>
+                <img src="images/hero.jpg" width="400">
+            </div>
+        </main>
+        <footer>
 
-    </footer>
+        </footer>
+    </body>
 </html>
