--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Nathan Baldwin | WDD 130</title>
-        <meta name="description" content="This homepage is representation of Nathan Baldwin's skills as a beginner software developer, who is attending classes to improve their skill and this site">
+        <title>About Us - Dry Oar Rafting</title>
+        <meta name="description" content="Learn more about our company here in this page.">
         <meta name="author" content="Nathan Baldwin">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
@@ -20,9 +20,25 @@
         </header>
         <main>
             <div class="hero">
-                <h1>Rafting Company</h1>
                 <img src="images/hero.jpg" width="400">
+                <h1>Quad Rafting Splash</h1>
+                <article>
+                    <img src="images/happyworker.png" width="200">
+                    <p>Our mission is to provide the best and most friendly rafting experience for you</p>
+                </article>
             </div>
+            <section>
+                <h2>History</h2>
+                <p>Way back in the 1950s we were using one raft BUT, NOW we realized that one is not enough to make a great experience so we started making quad rafts</p>
+            </section>
+            <section>
+                <h2>Adventure Awaits You!</h2>
+                <img src="images/raftingadventure1.jpg" width="200">
+                <img src="images/raftingadventure4.jpg" width="200">
+                <img src="images/raftingadventure3.jpg" width="230">
+                <img src="images/raftingadventure2.jpg" width="200">
+                <img src="images/raftingadventure5.jpg" width="230">
+            </section>
         </main>
         <footer>
 
