--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,10 +20,10 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/hero.jpg" width="400">
+                <img src="images/hero.jpg" alt="hero" width="400">
                 <h1>Quad Rafting Splash</h1>
                 <article>
-                    <img src="images/happyworker.png" width="200">
+                    <img src="images/happyworker.png" alt="happy worker" width="200">
                     <p>Our mission is to provide the best and most friendly rafting experience for you</p>
                 </article>
             </div>
@@ -33,15 +33,24 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/raftingadventure1.jpg" width="200">
-                <img src="images/raftingadventure4.jpg" width="200">
-                <img src="images/raftingadventure3.jpg" width="230">
-                <img src="images/raftingadventure2.jpg" width="200">
-                <img src="images/raftingadventure5.jpg" width="230">
+                <img src="images/raftingadventure1.jpg" alt="rafting adventure1" width="200">
+                <img src="images/raftingadventure4.jpg" alt="rafting adventure4" width="200">
+                <img src="images/raftingadventure3.jpg" alt="rafting adventure3" width="230">
+                <img src="images/raftingadventure2.jpg" alt="rafting adventure2" width="200">
+                <img src="images/raftingadventure5.jpg" alt="rafting adventure5" width="230">
             </section>
         </main>
         <footer>
-
+            <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
+            <a href="https://www.facebook.com">
+                <img src="images/facebook.png" alt="Facebook" width="50">
+            </a>
+            <a href="https://www.instagram.com">
+                <img src="images/instagram.png" alt="Instagram" width="50">
+            </a>
+            <a href="https://www.twitter.com/elonmusk">
+                <img src="images/twitter.svg" alt="Twitter" width="50">
+            </a>
         </footer>
     </body>
 </html>
