--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,16 +6,16 @@
         <title>About Us - Dry Oar Rafting</title>
         <meta name="description" content="Learn more about our company here in this page.">
         <meta name="author" content="Nathan Baldwin">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
-            <img src="images/logo.png" alt="rafting-logo">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+            <img class="logo" src="images/logo.png" alt="rafting-logo">
+            <nav class="nav_border">
+                <a class="navs" href="index.html">Home</a>
+                <a class="navs" href="about.html">About</a>
+                <a class="navs" href="trips.html">Trips</a>
+                <a class="navs" href="contact.html">Contact</a>
             </nav>
         </header>
         <main>
