--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,7 +35,7 @@
             <h3>Navigation</h3>
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About us</a>
+                <a href="about.html">About us</a>
                 <a href="#">Trips</a>
                 <a href="#">Contact Us</a>
             </nav>
