--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="wwr/site-plan-rafting.html">Site Plan</a>
             </nav>
         </header>
+    <div class="grid">
         <main>
             
             <h1>Nathan Baldwin | WD3D 130</h1>
@@ -29,14 +30,16 @@
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/adelaide-australia-temple" target="_blank">Adelaide Australia Temple</a></li>
             </ul>
         </main>
-        <aside class="box2">
+        <aside class="box">
             <h2>Washington</h2>
-            <img src="https://images.squarespace-cdn.com/content/v1/5d7ac4beb49f472f84660e4d/1606582808763-2OOIC2J8DBDT7W475G4E/Sticker-Washington-State-Golden-hour.jpg" alt="washington" width="200">
+            <img class="asideimg" src="https://images.squarespace-cdn.com/content/v1/5d7ac4beb49f472f84660e4d/1606582808763-2OOIC2J8DBDT7W475G4E/Sticker-Washington-State-Golden-hour.jpg" alt="washington" width="200">
             <p>Washington is a very rainy place where all of the land is pretty and green during the spring and in the summer its a comfortable warth of heat that won't make your skin melt right off your body</p>
         </aside>
+    </div>
+        
         <footer>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
         </footer>
     </body>
-    <!--5/8/2024--> 
+    <!--5/13/2024--> 
 </html>
