--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,46 +11,49 @@
     <body>
         <header>
             <img class="logo" src="images/logo.png" alt="rafting-logo">
-            <nav class="nav_border">
-                <a class="navs" href="index.html">Home</a>
-                <a class="navs" href="about.html">About</a>
-                <a class="navs" href="trips.html">Trips</a>
-                <a class="navs" href="contact.html">Contact</a>
+            <nav>
+                <a class="top_links"  href="index.html">Home</a>
+                <a class="top_links"  href="about.html">About</a>
+                <a class="top_links"  href="trips.html">Trips</a>
+                <a class="top_links"  href="contact.html">Contact</a>
             </nav>
         </header>
         <main>
             <div class="hero">
-                <img src="images/hero.jpg" alt="hero" width="400">
                 <h1>Quad Rafting Splash</h1>
                 <article>
-                    <img src="images/happyworker.png" alt="happy worker" width="200">
-                    <p>Our mission is to provide the best and most friendly rafting experience for you</p>
+                    <img src="images/hero.jpg" alt="hero" width="400">
+                    <p class="raft_hero">Our mission is to provide the best and most friendly rafting experience for you. And how we do that is pretty simple, we have people who work day and night on these premium quality rafts. We also have people inspecting each and every single raft for holes and defects in our rafts. </p>
                 </article>
             </div>
-            <section>
+            <section class="worker">
                 <h2>History</h2>
+                <img src="images/happyworker.png" alt="happy worker" width="200">
                 <p>Way back in the 1950s we were using one raft BUT, NOW we realized that one is not enough to make a great experience so we started making quad rafts</p>
             </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                <img src="images/raftingadventure1.jpg" alt="rafting adventure1" width="200">
-                <img src="images/raftingadventure4.jpg" alt="rafting adventure4" width="200">
-                <img src="images/raftingadventure3.jpg" alt="rafting adventure3" width="230">
-                <img src="images/raftingadventure2.jpg" alt="rafting adventure2" width="200">
-                <img src="images/raftingadventure5.jpg" alt="rafting adventure5" width="230">
-            </section>
+            <section2 class="customer_pictures">
+                <h2 class="adv_title">Adventure Awaits You!</h2>
+                <img class="customer_pictures" src="images/raftingadventure1.jpg" alt="rafting adventure1" width="200">
+                <img class="customer_pictures" src="images/raftingadventure4.jpg" alt="rafting adventure4" width="200">
+                <img class="customer_pictures" src="images/raftingadventure3.jpg" alt="rafting adventure3" width="230">
+                <img class="customer_pictures" src="images/raftingadventure2.jpg" alt="rafting adventure2" width="200">
+                <img class="customer_pictures" src="images/raftingadventure5.jpg" alt="rafting adventure5" width="230">
+            </section2>
         </main>
         <footer>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
-            <a href="https://www.facebook.com">
-                <img src="images/facebook.png" alt="Facebook" width="50">
-            </a>
-            <a href="https://www.instagram.com">
-                <img src="images/instagram.png" alt="Instagram" width="50">
-            </a>
-            <a href="https://www.twitter.com/elonmusk">
-                <img src="images/twitter.svg" alt="Twitter" width="50">
-            </a>
+            <div class="socials">
+                <a class="socials" href="https://www.facebook.com">
+                    <img src="images/facebook.png" alt="Facebook" width="50">
+                </a>
+                <a class="socials" href="https://www.instagram.com">
+                    <img src="images/instagram.png" alt="Instagram" width="50">
+                </a>
+                <a class="socials" href="https://www.twitter.com/elonmusk">
+                    <img src="images/twitter.svg" alt="Twitter" width="50">
+                </a>
+            </div>
         </footer>
     </body>
+    <!--5/14/2024--> 
 </html>
