--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,11 +33,26 @@
             </section>
             <section2 class="customer_pictures">
                 <h2 class="adv_title">Adventure Awaits You!</h2>
-                <img class="customer_pictures" src="images/raftingadventure1.jpg" alt="rafting adventure1" width="200">
-                <img class="customer_pictures" src="images/raftingadventure4.jpg" alt="rafting adventure4" width="200">
-                <img class="customer_pictures" src="images/raftingadventure3.jpg" alt="rafting adventure3" width="230">
-                <img class="customer_pictures" src="images/raftingadventure2.jpg" alt="rafting adventure2" width="200">
-                <img class="customer_pictures" src="images/raftingadventure5.jpg" alt="rafting adventure5" width="230">
+                <figure class="customer_pictures">
+                    <img  src="images/raftingadventure5.jpg" alt="rafting adventure5" width="230">
+                    <figcaption>"Wall climbing rafts!!</figcaption>
+                </figure>
+                <figure class="customer_pictures">
+                    <img  src="images/raftingadventure2.jpg" alt="rafting adventure2" width="200">
+                    <figcaption>"Wall jump YOLO!!"</figcaption>
+                </figure>
+                <figure class="customer_pictures">
+                <img  src="images/raftingadventure3.jpg" alt="rafting adventure3" width="230">
+                <figcaption>"Let me just lay down... ahhhh WATER!!"</figcaption>
+                </figure>
+                <figure class="customer_pictures">
+                    <img  src="images/raftingadventure4.jpg" alt="rafting adventure4" width="200"> 
+                    <figcaption>"Cannon BALL!! WATCH OUT!!"</figcaption>
+                </figure>
+                <figure class="customer_pictures">
+                    <img  src="images/raftingadventure1.jpg" alt="rafting adventure1" width="200">
+                    <figcaption>"ITS... TOO HEAVY!!"</figcaption>
+                </figure>
             </section2>
         </main>
         <footer>
