nathan baldwin quiz

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>WDD 130 | Quiz</title>
-        <link rel="stylesheet" href="styles/poll-form.css">
+        <link rel="stylesheet" href="styles/quiz.css">
     </head>
     <body>
         <header>
@@ -14,16 +14,17 @@
             <form>
                 <fieldset>
                     <label for="q1">Who's kanye's favorite president?</label><br>
-                    <input type="text" id="fname" name="q1"><br>
+                    <input type="text" id="q1" name="q1"><br>
                     <label for="q2">what are kayne's top 3 songs?</label><br>
-                    <textarea id="q2" name="q2" rows="4" placeholder="yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"></textarea><br>
+                    <textarea id="q2" name="q2" rows="3" placeholder="yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"></textarea><br>
                     <label for="q3"> what song did kayne say this "she don't believe in shooting stars"?</label><br>
                     <select>
                         <option>Stronger</option>
                         <option>Flashing Lights</option>
                         <option>Heartless</option>
                     </select>
-                    <input type="text" id="fname" name="q1"><br>
+                   <label for="q4">how many followers on spotify does kanye west have?</label><br>
+                    <input type="number" id="fname" name="q1"><br>
                 </fieldset>
             </form>
         </main>
