nathan baldwin quiz

--- a/quiz.html
+++ b/quiz.html
@@ -18,13 +18,13 @@
                     <label for="q2">what are kayne's top 3 songs?</label><br>
                     <textarea id="q2" name="q2" rows="3" placeholder="yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"></textarea><br>
                     <label for="q3"> what song did kayne say this "she don't believe in shooting stars"?</label><br>
-                    <select>
+                    <select id="q3">
                         <option>Stronger</option>
                         <option>Flashing Lights</option>
                         <option>Heartless</option>
-                    </select>
+                    </select><br>
                    <label for="q4">how many followers on spotify does kanye west have?</label><br>
-                    <input type="number" id="fname" name="q1"><br>
+                    <input type="number" id="q4" name="q4"><br>
                 </fieldset>
             </form>
         </main>
