Nathan baldwin quiz

--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>WDD 130 | Quiz</title>
+        <meta name="description" content="This homepage is representation of Nathan Baldwin's skills as a beginner software developer, who is attending classes to improve their skill and this site">
+        <meta name="author" content="Nathan Baldwin">
         <link rel="stylesheet" href="styles/quiz.css">
     </head>
     <body>
