Nathan baldwin quiz

--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,7 @@
                     <label for="q2">what are kayne's top 3 songs?</label><br>
                     <textarea id="q2" name="q2" rows="3" placeholder="yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"></textarea><br>
                     <label for="q3"> what song did kayne say this "she don't believe in shooting stars"?</label><br>
-                    <select id="q3">
+                    <select id="q3" name="q3">
                         <option>Stronger</option>
                         <option>Flashing Lights</option>
                         <option>Heartless</option>
