--- a/quiz.html
+++ b/quiz.html
@@ -15,18 +15,28 @@
         <main>
             <form>
                 <fieldset>
-                    <label for="q1">Who's kanye's favorite president?</label><br>
-                    <input type="text" id="q1" name="q1"><br>
-                    <label for="q2">what are kayne's top 3 songs?</label><br>
-                    <textarea id="q2" name="q2" rows="3" placeholder="yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"></textarea><br>
-                    <label for="q3"> what song did kayne say this "she don't believe in shooting stars"?</label><br>
-                    <select id="q3" name="q3">
-                        <option>Stronger</option>
-                        <option>Flashing Lights</option>
-                        <option>Heartless</option>
-                    </select><br>
-                   <label for="q4">how many followers on spotify does kanye west have?</label><br>
-                    <input type="number" id="q4" name="q4"><br>
+                    <div class="questions">
+                        <label for="q1">Who's kanye's favorite president?</label><br>
+                        <input type="text" id="q1" name="q1"><br>
+                    </div>
+                    <div class="questions">
+                        <label for="q2">what are kayne's top 3 songs?</label><br>
+                        <textarea id="q2" name="q2" rows="3" placeholder="yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"></textarea><br>
+                    </div>
+                    <div class="questions">
+                        <label for="q3"> what song did kayne say this "she don't believe in shooting stars"?</label><br>
+                        <select id="q3" name="q3">
+                            <option>Stronger</option>
+                            <option>Flashing Lights</option>
+                            <option>Heartless</option>
+                        </select><br>
+                    </div>
+                    <div class="questions">
+                        <label for="q4">how many followers on spotify does kanye west have?</label><br>
+                        <input type="number" id="q4" name="q4"><br>
+                        <button type="submit">Submit</button>
+                    </div>
+                   
                 </fieldset>
             </form>
         </main>
