Nathan baldwin contact page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>About Us - Dry Oar Rafting</title>
+        <title>About Us - Quad-Raft</title>
         <meta name="description" content="Learn more about our company here in this page.">
         <meta name="author" content="Nathan Baldwin">
         <link rel="stylesheet" href="styles/rafting.css">
