--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -20,14 +20,14 @@
         </header>
         <main>
             <div class="hero">
-                <h1>Contact information</h1><br>
-                <article><br>
+                <h1>Contact information</h1>
+                <article>
                     <p class="raft_hero">address: 841 Robert C Byrd Dr, Crab Orchard, WV 25827 <br>phone number:(778)-330-2389 <br>email:Quad_Raft@gmail.com   
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3155.6432734487353!2d-81.24516561248265!3d37.728050357638914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1716306206486!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
                     </p><br>
                 </article>
             </div>
-        <ul class="employees">
+        <div class="employees">
             <figure>
                 <img src="images/happyemployee1.jpg" alt="happy-employee" width="200">
                 <figcaption>I'm happy to help each and every customer</figcaption>
@@ -40,7 +40,7 @@
                 <img src="images/happyworker.png" alt="happy-employee" width="200">
                 <figcaption>I enjoy my time working here!!</figcaption>
             </figure>
-        </ul>
+        </div>
             <div class="contact">
                 <form>
                     <fieldset>
@@ -51,11 +51,11 @@
                         <input type="text" id="useremail" name="useremail"><br>
                         <label for="purpose">I am asking about a: </label><br>
                         <input type="radio" id="General_Inquiry" value="General_Inquiry" name="purpose">
-                        <label for="General Inquiry">General Inquiry</label><br>
+                        <label for="General_Inquiry">General Inquiry</label><br>
                         <input type="radio" id="Reservation_Question" value="General_Inquiry" name="purpose">
-                        <label for="General Inquiry">Reservation Question</label><br>
+                        <label for="Reservation_Question">Reservation Question</label><br>
                         <input type="radio" id="Website_Suggestion" value="General_Inquiry" name="purpose">
-                        <label for="General Inquiry">Website Suggestion</label><br>
+                        <label for="Website_Suggestion">Website Suggestion</label><br>
                         <input type="checkbox" id="subscribe" name="subscirbe">
                         <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
                         <button>Submit</button>
