nathan baldwin contact page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -45,19 +45,29 @@
                 <form>
                     <fieldset>
                         <legend>Request Service</legend>
-                        <label for="username">Username</label><br>
+                        <label for="username" id="username">Username</label><br>
                         <input type="text" id="username" name="username"><br>
-                        <label for="useremail">Email</label><br>
+
+                        <label for="useremail" id="useremail">Email</label><br>
                         <input type="text" id="useremail" name="useremail"><br>
+
                         <label for="purpose">I am asking about a: </label><br>
                         <input type="radio" id="General_Inquiry" value="General_Inquiry" name="purpose">
-                        <label for="General_Inquiry">General Inquiry</label><br>
+
+                        <label for="General_Inquiry" id="General_Inquiry">General Inquiry</label><br>
+
                         <input type="radio" id="Reservation_Question" value="General_Inquiry" name="purpose">
-                        <label for="Reservation_Question">Reservation Question</label><br>
+
+                        <label for="Reservation_Question" id="Reservation_Question" >Reservation Question</label><br>
+
                         <input type="radio" id="Website_Suggestion" value="General_Inquiry" name="purpose">
-                        <label for="Website_Suggestion">Website Suggestion</label><br>
+
+                        <label for="Website_Suggestion" id="Website_Suggestion">Website Suggestion</label><br>
+
                         <input type="checkbox" id="subscribe" name="subscirbe">
-                        <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
+
+                        <label for="subscribe" id="subscribe">Please subscribe me to the monthly newsletter</label><br>
+                        
                         <button>Submit</button>
                     </fieldset>
                 </form>
