Nathan baldwin contact page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -45,10 +45,10 @@
                 <form>
                     <fieldset>
                         <legend>Request Service</legend>
-                        <label for="username" id="username">Username</label><br>
+                        <label for="username">Username</label><br>
                         <input type="text" id="username" name="username"><br>
 
-                        <label for="useremail" id="useremail">Email</label><br>
+                        <label for="useremail">Email</label><br>
                         <input type="text" id="useremail" name="useremail"><br>
 
                         <label for="purpose" id="purpose">I am asking about a: </label><br>
