--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
                 <article>
                     <p class="raft_hero">address: 841 Robert C Byrd Dr, Crab Orchard, WV 25827 <br>phone number:(778)-330-2389 <br>email:Quad_Raft@gmail.com   
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3155.6432734487353!2d-81.24516561248265!3d37.728050357638914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1716306206486!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
-                    </p>
+                    </p><br>
                 </article>
             </div>
         <div class="employees">
@@ -47,27 +47,17 @@
                         <legend>Request Service</legend>
                         <label for="username">Username</label><br>
                         <input type="text" id="username" name="username"><br>
-
                         <label for="useremail">Email</label><br>
                         <input type="text" id="useremail" name="useremail"><br>
-
-                        <label for="purpose" id="purpose">I am asking about a: </label><br>
+                        <label for="purpose">I am asking about a: </label><br>
                         <input type="radio" id="General_Inquiry" value="General_Inquiry" name="purpose">
-
-                        <label for="General_Inquiry" id="General_Inquiry">General Inquiry</label><br>
-
+                        <label for="General_Inquiry">General Inquiry</label><br>
                         <input type="radio" id="Reservation_Question" value="General_Inquiry" name="purpose">
-
-                        <label for="Reservation_Question" id="Reservation_Question" >Reservation Question</label><br>
-
+                        <label for="Reservation_Question">Reservation Question</label><br>
                         <input type="radio" id="Website_Suggestion" value="General_Inquiry" name="purpose">
-
-                        <label for="Website_Suggestion" id="Website_Suggestion">Website Suggestion</label><br>
-
+                        <label for="Website_Suggestion">Website Suggestion</label><br>
                         <input type="checkbox" id="subscribe" name="subscirbe">
-
-                        <label for="subscribe" id="subscribe">Please subscribe me to the monthly newsletter</label><br>
-                        
+                        <label for="subscribe">Please subscribe me to the monthly newsletter</label><br>
                         <button>Submit</button>
                     </fieldset>
                 </form>
