Nathan baldwin contact page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -49,7 +49,7 @@
                         <input type="text" id="username" name="username"><br>
                         <label for="useremail">Email</label><br>
                         <input type="text" id="useremail" name="useremail"><br>
-                        <label for="purpose">I am asking about a: </label><br>
+                        <label>I am asking about a: </label><br>
                         <input type="radio" id="General_Inquiry" value="General_Inquiry" name="purpose">
                         <label for="General_Inquiry">General Inquiry</label><br>
                         <input type="radio" id="Reservation_Question" value="General_Inquiry" name="purpose">
