--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -20,9 +20,9 @@
         </header>
         <main>
             <div class="hero">
-                <h1></h1>
+                <h1>Contact</h1>
                 <article>
-                    <h2>Contact information</h2>
+                    <h2>information</h2>
                     <p class="raft_hero">address: 841 Robert C Byrd Dr, Crab Orchard, WV 25827 <br>phone number:(778)-330-2389 <br>email:Quad_Raft@gmail.com   
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3155.6432734487353!2d-81.24516561248265!3d37.728050357638914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1716306206486!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
                     </p><br>
