nathan baldwin trips page edit

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -43,6 +43,7 @@
         </main>
         <footer>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
+            <a class="wireframe" href="https://app.moqups.com/useRCg1CrQDVAVHsufhNwKdUk8CoZOk2/view/page/ad64222d5">wireframe</a>
             <div class="socials">
                 <a class="socials" href="https://www.facebook.com">
                     <img src="images/facebook.png" alt="Facebook" width="50">
