--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -43,7 +43,7 @@
         </main>
         <footer>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
-            <a class="wireframe" href="https://app.moqups.com/useRCg1CrQDVAVHsufhNwKdUk8CoZOk2/view/page/ad64222d5">wireframe</a>
+            <a class="wireframe" href="https://app.moqups.com/useRCg1CrQDVAVHsufhNwKdUk8CoZOk2/view/page/ad64222d5" target="_blank">wireframe</a>
             <div class="socials">
                 <a class="socials" href="https://www.facebook.com">
                     <img src="images/facebook.png" alt="Facebook" width="50">
@@ -57,5 +57,5 @@
             </div>
         </footer>
     </body>
-    <!--5/20/2024--> 
+    <!--5/29/2024--> 
 </html>
