Nathan baldwin trip page edit

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -37,7 +37,7 @@
             </div>
             <p>
             <a class="contact" href="contact.html">
-                <img src="images/call.png" alt="Facebook" width="50">
+                <img src="images/call.png" alt="contact" width="50">
             </a>
             </p>
         </main>
