Nathan baldwin about page edit, contact page edit, and index page edit

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -56,6 +56,7 @@
             </section2>
         </main>
         <footer>
+            <a class="wireframe" href="https://app.moqups.com/useRCg1CrQDVAVHsufhNwKdUk8CoZOk2/view/page/a6ab97989" target="_blank">wireframe</a>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
             <div class="socials">
                 <a class="socials" href="https://www.facebook.com">
