--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,7 +42,7 @@
                 <figcaption>I enjoy my time working here!!</figcaption>
             </figure>
         </div>
-            <div class="contact">
+            <div class="service">
                 <form>
                     <fieldset>
                         <legend>Request Service</legend>
@@ -68,6 +68,7 @@
         </main>
         <footer>
             <p>©2024 🌲 Nathan Baldwin 🌲 Washington State</p>
+            <a class="wireframe" href="https://app.moqups.com/useRCg1CrQDVAVHsufhNwKdUk8CoZOk2/view/page/a80215e56" target="_blank">wireframe</a>
             <div class="socials">
                 <a class="socials" href="https://www.facebook.com">
                     <img src="images/facebook.png" alt="Facebook" width="50">
@@ -81,5 +82,5 @@
             </div>
         </footer>
     </body>
-    <!--5/20/2024--> 
+    <!--5/29/2024--> 
 </html>
